syntax = "proto3";

package transport_catalogue_serialize;

message Edge {
		uint32 from = 1;
		uint32 to = 2;
		double weight = 3;
		uint32 count = 4;
		uint32 busID = 5;
}

message EdgeId {
	repeated uint32 edgeId = 1;
}

message DirectedWeightedGraph {
	repeated Edge edges = 1;
	repeated EdgeId incidenceList = 2;
}